--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>G4- Página principal</title>
+  <title>Medio Ambiente</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +31,7 @@
                 <div class="calcite-web">
                   <div class="card-base">
                     <div class="gallery-image">
-                      <img alt="A Partnership for Success&nbsp;" src="./assets/css/images/app1.jpg" id="ember141" class="card-image card-image-wrap ember-view" style="width: 250px; height: 135px; padding: 10px;">
+                      <img alt="&nbsp;" src="./assets/css/images/app1.jpg" id="ember141" class="card-image card-image-wrap ember-view" style="width: 250px; height: 135px; padding: 10px;">
                     </div>
                     <div class="card-content">
                       <div class="gallery-card-title">
@@ -50,14 +50,14 @@
                 <div class="calcite-web">
                   <div class="card-base">
                     <div class="gallery-image">
-                      <img alt="A Partnership for Success&nbsp;" src="./assets/css/images/app2.jpg" id="ember141" class="card-image card-image-wrap ember-view" style="width: 250px; height: 135px; padding: 10px;">
+                      <img alt="&nbsp;" src="./assets/css/images/app2.jpg" id="ember141" class="card-image card-image-wrap ember-view" style="width: 250px; height: 135px; padding: 10px;">
                     </div>
                     <div class="card-content">
                       <div class="gallery-card-title">
-                        <h4 style="font-size:28px;">Aplicación 2&nbsp;</h4>
+                        <h4 style="font-size:28px;">Playas y Calas&nbsp;</h4>
                       </div>
-                      <p class="gallery-card-desc-snippet">TEXTO EXPLICATIVO</p>
-                      <a href="" target="_blank" rel="noopener noreferrer" class="btn btn-primary explore-button">Abrir aplicación</a>
+                      <p class="gallery-card-desc-snippet">Esta app permite vigilar las masificaciones en playas para profesionales, así como planificar por parte del turista a qué playa ir según el estado meteorológico de las mismas.</p>
+                      <a href="https://mastergis-g4.maps.arcgis.com/apps/opsdashboard/index.html#/f2b13e443bfd42dc8f5e5d3b51d51185" target="_blank" rel="noopener noreferrer" class="btn btn-primary explore-button">Abrir aplicación</a>
                     </div>
                   </div>
                 </div>
