boton inicio y descripciones de las apps

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <div class="gallery-card-title">
                         <h4 style="font-size:28px;">Divulgación Marina&nbsp;</h4>
                       </div>
-                      <p class="gallery-card-desc-snippet">TEXTO EXPLICATIVO</p>
+                      <p class="gallery-card-desc-snippet">Podrás descubrir más acerca de los fondos marinos de Calp, su vida y sus tipos de sedimento, los lugares recomendados para bucear y sus fantásticas playas. ¿Qué tienes bajo tus pies?</p>
                       <a href="https://marroca13.github.io/DivulgacioMarinaCalp/" target="_blank" rel="noopener noreferrer" class="btn btn-primary explore-button">Abrir aplicación</a>
                     </div>
                   </div>
@@ -54,15 +54,21 @@
                     </div>
                     <div class="card-content">
                       <div class="gallery-card-title">
-                        <h4 style="font-size:28px;">Playas y Calas&nbsp;</h4>
+                        <h4 style="font-size:28px;">Playas y Submarinismo&nbsp;</h4>
                       </div>
-                      <p class="gallery-card-desc-snippet">Esta app permite vigilar las masificaciones en playas para profesionales, así como planificar por parte del turista a qué playa ir según el estado meteorológico de las mismas.</p>
+                      <p class="gallery-card-desc-snippet">¡Planifica tu día en el litoral de Calp! Ten en cuenta los servicios que ofrecen las playas, su composición, la predicción marítima, sus WebCams en tiempo real y su máxima actualidad. ¿Adónde piensas ir hoy?</p>
                       <a href="https://mastergis-g4.maps.arcgis.com/apps/opsdashboard/index.html#/f2b13e443bfd42dc8f5e5d3b51d51185" target="_blank" rel="noopener noreferrer" class="btn btn-primary explore-button">Abrir aplicación</a>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+
+            <div class="contenedorVolver">
+                <a href="https://roimv.github.io/G4_mainWeb/" target="" rel="noopener noreferrer" class="btn btn-primary explore-button">INICIO</a>
+            </div>
+
+
           </ul>
         </nav>
       </header>
